# ScienceReading

./: .pylintrc  License  app.pyi  build.py  main.py  nuitka-crash-report.xml  readme.md  requirements.txt  setup-template.iss
PyStand/: CMakeLists.txt  PyStand.cpp  Readme.md  resource.aps
embedded/: .main
embedded/app/: .app.egg  entry.cp38-win_amd64.pyd
embedded/src/: .app.egg  app.cp38-win_amd64.pyd  entry.cp38-win_amd64.pyd
